--- a/style.css
+++ b/style.css
@@ -1,67 +1,42 @@
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  min-height: 100%;
 }
 
 body {
-	font-size: 18px;
-	padding: .5em 2em;
-	text-align: center;
+  background: linear-gradient(180deg, #feead2, #fff8ee);
+  font-family: Open Sans;
+  font-size: 16px;
+  &:before {
+    content: '';
+    width: 800px;
+    height: 600px;
+    background: #f00;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: none;
+  }
 }
 
-h1 {
-	font-size: 3em;
-}
+     .calculator {
+      width: 300px;
+      background: linear-gradient(135deg, #fcaf3b, #f25c2a);
+      box-shadow: 0 10px 28px #d8724a;
+      margin: 30px auto;
+      position: absolute;
+      overflow: hidden;
+      border-radius: 20px;
+      top: 50%;
+      left: 50%;
+       z-index: 1;
+       transform: translate(-50%, -62%);
+      }
 
-h2 {
-	font-size: 2.25em;
-}
-
-#container {
-	margin: 2em auto;
-	width: 100%;
-}
-
-#calculator {
-	display: grid;
-	grid-template-columns: repeat(4, 150px);
-	margin: 25px auto;
-	width: 600px;
-}
-
-#display {
-	grid-column-start: 1;
-	grid-column-end: 5;
-	border-color: lightgrey;
-	border-style: solid;
-	display: inline;
-	font-size: 1.5em;
-	line-height: 120px;
-	padding: 20px 40px;
-	height: 150px;
-	width: 600px;
-}
-
-.calculator-button {
-	border-color: pink;
-	border-style: solid;
-	border-radius: 4px;
-	cursor: pointer;
-	display: inline;
-	font-size: 4em;
-	line-height: 120px;
-	padding: 20px 40px;
-	height: 150px;
-	width: 150px;
-	box-shadow: 0 4px #b0d2cf;
-}
-
-.double-width {
-	padding: 20px 30px;
-	width: 300px;
-}
-
-.full-width {
-	width: 600px;
-}
