--- a/style.css
+++ b/style.css
@@ -1,12 +1,25 @@
 body {
-  background: rgb(38, 222, 225);
+  background: linear-gradient(99.6deg, rgb(112, 128, 152) 10.6%,
+   rgb(242, 227, 234) 32.9%, 
+  rgb(234, 202, 213) 52.7%, rgb(220, 227, 239) 72.8%,
+   rgb(185, 205, 227) 81.1%,
+   rgb(154, 180, 212) 102.4%);
   font-family: 'Figtree', sans-serif;
   transition: background .1s;
-}
+
 
 .background {
-  background: linear-gradient(to right, #d7d2cc 0%, #304352 100%);
+  background: linear-gradient(99.6deg, rgb(112, 128, 152) 10.6%,
+   rgb(242, 227, 234) 32.9%, 
+  rgb(234, 202, 213) 52.7%, rgb(220, 227, 239) 72.8%,
+   rgb(185, 205, 227) 81.1%,
+   rgb(154, 180, 212) 102.4%);
 
+}
+
+h1 {
+  font-family: 'Dancing Script', cursive;
+  color: rgb(255, 255, 255);
 }
 
 .calc {
