--- a/style.css
+++ b/style.css
@@ -6,20 +6,20 @@ body {
    rgb(154, 180, 212) 102.4%);
   font-family: 'Figtree', sans-serif;
   transition: background .1s;
-
+}
 
 .background {
   background: linear-gradient(99.6deg, rgb(112, 128, 152) 10.6%,
-   rgb(242, 227, 234) 32.9%, 
-  rgb(234, 202, 213) 52.7%, rgb(220, 227, 239) 72.8%,
-   rgb(185, 205, 227) 81.1%,
-   rgb(154, 180, 212) 102.4%);
+  rgb(242, 227, 234) 32.9%, 
+ rgb(234, 202, 213) 52.7%, rgb(220, 227, 239) 72.8%,
+  rgb(185, 205, 227) 81.1%,
+  rgb(154, 180, 212) 102.4%);
 
 }
 
 h1 {
   font-family: 'Dancing Script', cursive;
-  color: rgb(255, 255, 255);
+  color: rgb(74, 71, 71);
 }
 
 .calc {
@@ -217,7 +217,3 @@ h1 {
   border-radius: 2px;
   margin: 0 3px;
 }
-
-
-
-
